React P1: Fixed Bootstrap port spacing error

--- a/src/app.css
+++ b/src/app.css
@@ -20,7 +20,7 @@
 
 #scriptureImgNavBar
 {
-    width: 50vw;
+    width: 40vw;
 }
 
 .btn-primary, .btn-primary:active, .btn-primary:focus, .btn-primary:active:focus, .btn-primary:hover
